--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vinxi build",
     "start": "vinxi start",
     "prisma-generate": "prisma generate",
+    "lint": "eslint app --ignore-pattern .gitignore",
+    "lint:fix": "eslint app --fix --ignore-pattern .gitignore",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
@@ -23,15 +26,20 @@
     "vinxi": "0.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
     "postcss": "^8.5.1",
     "prettier": "3.5.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
+    "typescript-eslint": "^8.24.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
