--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:run": "docker compose up -d",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "npx tsx app/db/seed.ts"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.104.0",
@@ -23,6 +24,7 @@
     "@tanstack/start": "^1.104.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
+    "drizzle-seed": "^0.3.1",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
