Playing with loaders and useSuspenseQuery

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres"
+
+# Emulated delay to explore TanStack SWR features.
+DELAY=3000
