--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.20.1",
     "eslint-import-resolver-typescript": "^3.8.0",
@@ -50,7 +50,7 @@
     "postcss": "^8.5.2",
     "prettier": "3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
