--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
     "tailwind-merge": "^3.0.1",
-    "vinxi": "0.5.3"
+    "unenv": "^1.10.0",
+    "vinxi": "0.5.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
@@ -50,7 +52,7 @@
     "postcss": "^8.5.2",
     "prettier": "3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
