--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "db:seed": "npx tsx app/db/seed.ts"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-router": "^1.105.0",
-    "@tanstack/react-router-with-query": "^1.105.0",
-    "@tanstack/router-devtools": "^1.105.0",
-    "@tanstack/start": "^1.105.2",
+    "@tanstack/react-query": "^5.66.2",
+    "@tanstack/react-router-with-query": "1.81.14",
+    "@tanstack/router-devtools": "1.81.14",
+    "@tanstack/react-router": "1.81.14",
+    "@tanstack/start": "1.81.18",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-seed": "^0.3.1",
@@ -56,6 +56,7 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^3.109.1"
   }
 }
