BetterAuth basic configuration

--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
+# Auth.
+BETTER_AUTH_SECRET="P}.]Ax)a9r>ODYBM^s}J"
+BETTER_AUTH_URL=http://localhost:3000
+
+# Data layer.
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres"
+
+# App-specific options.
 FETCH_TODOS_DELAY=2000
 FETCH_TODO_BY_ID_DELAY=3000
