--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@tanstack/react-router-with-query": "^1.105.0",
     "@tanstack/router-devtools": "^1.105.0",
     "@tanstack/start": "^1.105.2",
+    "@tanstack/zod-adapter": "^1.105.0",
+    "better-auth": "^1.1.18",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-seed": "^0.3.1",
