--- a/package.json
+++ b/package.json
@@ -19,31 +19,38 @@
     "db:seed": "npx tsx app/db/seed.ts"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.66.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.66.3",
     "@tanstack/react-router": "^1.105.0",
     "@tanstack/react-router-with-query": "^1.105.0",
     "@tanstack/router-devtools": "^1.105.0",
-    "@tanstack/start": "^1.105.2",
+    "@tanstack/start": "^1.105.3",
     "@tanstack/zod-adapter": "^1.105.0",
     "better-auth": "^1.1.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "drizzle-seed": "^0.3.1",
+    "lucide-react": "^0.475.0",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.6",
+    "tailwindcss-animate": "^1.0.7",
     "unenv": "^1.10.0",
     "vinxi": "0.5.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^22.13.4",
     "@types/pg": "^8.11.11",
-    "@types/react": "^19.0.8",
+    "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.20.1",
@@ -51,10 +58,8 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.15.0",
-    "postcss": "^8.5.2",
     "prettier": "3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "tailwindcss": "^4.0.6",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0",
