--- a/components.json
+++ b/components.json
@@ -7,15 +7,15 @@
     "config": "tailwind.config.js",
     "css": "app/styles/global.css",
     "baseColor": "zinc",
-    "cssVariables": true,
-    "prefix": "tw-"
+    "cssVariables": false,
+    "prefix": ""
   },
   "aliases": {
-    "components": "~/lib/components",
-    "utils": "~/lib/utils",
-    "ui": "~/lib/components/ui",
-    "lib": "~/lib",
-    "hooks": "~/hooks"
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
   },
   "iconLibrary": "lucide"
 }
