--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "db:seed": "npx tsx app/db/seed.ts"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.3",
