--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ BETTER_AUTH_URL=http://localhost:3000
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres"
 
 # App-specific options.
-FETCH_TODOS_DELAY=0
-FETCH_TODO_BY_ID_DELAY=3000
+FETCH_RECIPES_DELAY=0
+FETCH_RECIPE_DELAY=3000
