--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.8",
+    "@tanstack/react-form": "^0.43.2",
     "@tanstack/react-query": "^5.66.9",
     "@tanstack/react-router": "^1.109.2",
     "@tanstack/react-router-with-query": "^1.109.2",
@@ -42,6 +43,7 @@
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scan": "^0.1.3",
     "redaxios": "^0.5.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
