--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.475.0",
+    "next-themes": "^0.4.4",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scan": "^0.1.3",
     "redaxios": "^0.5.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.8",
     "tailwindcss-animate": "^1.0.7",
