--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Auth.
 BETTER_AUTH_SECRET="P}.]Ax)a9r>ODYBM^s}J"
 BETTER_AUTH_URL=http://localhost:3000
+BETTER_AUTH_COOKIE_CACHE=300
 
 # Data layer.
 DATABASE_URL="postgres://postgres:postgres@localhost:5432/postgres"
