--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.4",
     "eslint": "^9.21.0",
     "eslint-import-resolver-typescript": "^3.8.3",
