--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "db:seed": "npx tsx app/db/seed.ts"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
