--- a/package.json
+++ b/package.json
@@ -26,52 +26,52 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tailwindcss/vite": "^4.0.8",
-    "@tanstack/react-form": "^0.43.2",
-    "@tanstack/react-query": "^5.66.9",
-    "@tanstack/react-router": "^1.109.2",
-    "@tanstack/react-router-with-query": "^1.109.2",
-    "@tanstack/router-devtools": "^1.109.2",
-    "@tanstack/start": "^1.111.1",
-    "@tanstack/zod-adapter": "^1.109.2",
-    "better-auth": "^1.1.19",
+    "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/react-form": "^1.0.5",
+    "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-router": "^1.114.3",
+    "@tanstack/react-router-with-query": "^1.114.3",
+    "@tanstack/router-devtools": "^1.114.3",
+    "@tanstack/react-start": "^1.114.3",
+    "@tanstack/zod-adapter": "^1.114.3",
+    "better-auth": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.39.3",
+    "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
-    "lucide-react": "^0.475.0",
+    "lucide-react": "^0.479.0",
     "next-themes": "^0.4.4",
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scan": "^0.1.3",
+    "react-scan": "^0.2.13",
     "redaxios": "^0.5.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.0.12",
     "tailwindcss-animate": "^1.0.7",
     "unenv": "^1.10.0",
     "vinxi": "0.5.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/node": "^22.13.5",
+    "@eslint/js": "^9.22.0",
+    "@types/node": "^22.13.10",
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "dotenv": "^16.4.7",
-    "drizzle-kit": "^0.30.4",
-    "eslint": "^9.21.0",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.22.0",
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
-    "prettier": "3.5.2",
+    "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
