--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
+## Client environment variables.
+VITE_LOG_LEVEL=debug
+
+## Server environment variables.
+LOG_LEVEL=debug
+
 # Auth.
 BETTER_AUTH_SECRET="P}.]Ax)a9r>ODYBM^s}J"
 BETTER_AUTH_URL=http://localhost:3000
