--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
+    "dev": "vinxi dev | pino-pretty",
     "build": "vinxi build",
     "start": "vinxi start",
     "prisma-generate": "prisma generate",
@@ -26,29 +26,30 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@tailwindcss/vite": "^4.0.12",
+    "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-form": "^1.0.5",
-    "@tanstack/react-query": "^5.67.2",
-    "@tanstack/react-router": "^1.114.3",
-    "@tanstack/react-router-with-query": "^1.114.3",
-    "@tanstack/router-devtools": "^1.114.3",
-    "@tanstack/react-start": "^1.114.3",
-    "@tanstack/zod-adapter": "^1.114.3",
-    "better-auth": "^1.2.3",
+    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-router": "^1.114.17",
+    "@tanstack/react-router-with-query": "^1.114.17",
+    "@tanstack/react-start": "^1.114.19",
+    "@tanstack/react-router-devtools": "^1.114.21",
+    "@tanstack/zod-adapter": "^1.114.17",
+    "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.479.0",
-    "next-themes": "^0.4.4",
-    "pg": "^8.13.3",
+    "next-themes": "^0.4.6",
+    "pg": "^8.14.0",
+    "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scan": "^0.2.13",
+    "react-scan": "^0.2.14",
     "redaxios": "^0.5.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.12",
+    "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7",
     "unenv": "^1.10.0",
     "vinxi": "0.5.3",
@@ -63,15 +64,16 @@
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.22.0",
-    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-import-resolver-typescript": "^3.8.7",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "pino-pretty": "13.0.0",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
+    "typescript-eslint": "^8.26.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
