--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.68.0",
     "@tanstack/react-router": "^1.114.17",
+    "@tanstack/react-router-devtools": "^1.114.21",
     "@tanstack/react-router-with-query": "^1.114.17",
     "@tanstack/react-start": "^1.114.19",
-    "@tanstack/react-router-devtools": "^1.114.21",
     "@tanstack/zod-adapter": "^1.114.17",
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
@@ -41,6 +41,7 @@
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.0",
     "pino": "^9.6.0",
     "react": "^19.0.0",
