--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.479.0",
+    "mjml": "^4.15.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.0",
