--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.482.0",
     "mjml": "^4.15.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
@@ -63,10 +63,12 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/mjml": "^4.7.4",
+    "@types/nodemailer": "6.4.17",
     "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.22.0",
-    "eslint-import-resolver-typescript": "^3.8.7",
+    "eslint-import-resolver-typescript": "^3.9.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
