WIP Portainer GitOps

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vinxi dev | pino-pretty",
     "build": "vinxi build",
-    "start": "vinxi start",
+    "start": "node --env-file=.env .output/server/index.mjs",
     "prisma-generate": "prisma generate",
     "lint": "eslint app --ignore-pattern .gitignore",
     "lint:fix": "eslint app --fix --ignore-pattern .gitignore",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "db:run": "docker compose up -d",
+    "local-dev:run": "docker compose -f container/local-dev.yml up -d",
+    "local-dev:stop": "docker compose -f container/local-dev.yml up -d",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -43,7 +44,7 @@
     "mjml": "^4.15.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
-    "pg": "^8.14.0",
+    "pg": "^8.14.1",
     "pino": "^9.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -53,19 +54,16 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7",
-    "unenv": "^1.10.0",
     "vinxi": "0.5.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/mjml": "^4.7.4",
     "@types/node": "^22.13.10",
-    "@types/pg": "^8.11.11",
+    "@types/nodemailer": "6.4.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@types/mjml": "^4.7.4",
-    "@types/nodemailer": "6.4.17",
-    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.22.0",
     "eslint-import-resolver-typescript": "^3.9.0",
