Minor fixes, TODO debug production built

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint:fix": "eslint app --fix --ignore-pattern .gitignore",
     "check-types": "tsc --project tsconfig.json --pretty --noEmit",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "local-dev:run": "docker compose -f container/local-dev.yml up -d",
-    "local-dev:stop": "docker compose -f container/local-dev.yml up -d",
+    "local-env:run": "docker compose -f container/local-dev.yml up -d",
+    "local-env:stop": "docker compose -f container/local-dev.yml up -d",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
