WIP GitOps on swarm

--- a/container/swarm-stack.yml
+++ b/container/swarm-stack.yml
@@ -18,7 +18,7 @@ services:
     image: node:23-slim
     working_dir: /app
     volumes:
-      - ..:/app
+      - .:/app
     command: sh container/app-dockerfile.sh
     environment:
       # FIXME: Use docker swarm secrets.
