--- a/container/docker-swarm.yml
+++ b/container/docker-swarm.yml
@@ -13,9 +13,7 @@ services:
       - app-network
 
   app:
-    build:
-      context: ..
-      dockerfile: container/app.dockerfile
+    image: 192.168.1.30:5000/tanstack-start-template:latest
     environment:
       # FIXME: Use docker swarm secrets.
       DB_HOST: postgres
