--- a/apps/node/moon.yml
+++ b/apps/node/moon.yml
@@ -1,14 +1,21 @@
 type: application
 language: typescript
+
+fileGroups:
+  sources:
+    - 'app/**/*'
+    - 'public/**/*'
+    - '.env'
+
 tasks:
-  test:
-    description: Run the test suite.
-    command: |
-      echo Here $DOCKER_REGISTRY $VITE_LOG_LEVEL
   docker-build:
     description: Build the Docker image for the app.
     options:
       envFile: '/.env'
+    inputs:
+      - '@globs(sources)'
+    outputs:
+      - .output
     command: |
       docker build \
         -t $DOCKER_REGISTRY/tanstack-start-template:latest \
