--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-start-example-basic-auth",
+  "name": "tanstack-start-template",
   "private": true,
   "sideEffects": false,
   "type": "module",
