--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -1,9 +1,10 @@
 # https://moonrepo.dev/docs/config/workspace
-$schema: "./cache/schemas/workspace.json"
+$schema: './cache/schemas/workspace.json'
 
 vcs:
   manager: git
 
 projects:
-  - "apps/*"
-  - "packages/*"
+  - 'apps/*'
+  - 'tools/*'
+  - 'packages/*'
