WIP setting up local dev

--- a/apps/node/.env
+++ b/apps/node/.env
@@ -1,3 +1,6 @@
+## CICD pipeline environment variables.
+APP_NAME=tanstack-start-template
+
 ## Client environment variables.
 VITE_LOG_LEVEL=debug
 
@@ -5,19 +8,14 @@ VITE_LOG_LEVEL=debug
 LOG_LEVEL=debug
 
 # Auth.
-BETTER_AUTH_SECRET="P}.]Ax)a9r>ODYBM^s}J"
 BETTER_AUTH_URL=http://localhost:3000
 BETTER_AUTH_COOKIE_CACHE=300
-
-# Data layer.
-DATABASE_URL=postgres://postgres:postgres@postgres:5432/postgres
 
 # Mail service.
 SMTP_SERVICE=gmail
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=n.barletta95@gmail.com
-SMTP_PASSWORD=mwmfgdmrlgjefpkq
 
 # App-specific options.
 FETCH_RECIPES_DELAY=0
