--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+# CICD pipeline environment variables.
 DOCKER_REGISTRY=192.168.1.30:5000
+
+# Local Postgres configuration.
+DB_CONTAINER=tanstack-start-template-db
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_NAME=tanstack-start-template
