--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -7,13 +7,6 @@
     "dev": "vinxi dev | pino-pretty",
     "build": "vinxi build",
     "start": "node --env-file=.env .output/server/index.mjs | pino-pretty",
-    "prisma-generate": "prisma generate",
-    "lint": "eslint app --ignore-pattern .gitignore",
-    "lint:fix": "eslint app --fix --ignore-pattern .gitignore",
-    "check-types": "tsc --project tsconfig.json --pretty --noEmit",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "local-env:run": "docker compose -f container/local-dev.yml up -d",
-    "local-env:stop": "docker compose -f container/local-dev.yml up -d",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
@@ -38,6 +31,7 @@
     "better-auth": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.40.0",
     "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.482.0",
