--- a/tools/dev/moon.yml
+++ b/tools/dev/moon.yml
@@ -1,38 +1,61 @@
 type: tool
+language: shell
 
 tasks:
-  db:
+  dev:
+    description: Start the development server.
     local: true
+    deps:
+      - 'node:install'
+      - '~:db-run'
+      - 'node:dev'
+
+  db-run:
     description: Run the database container.
+    options:
+      envFile: '/.env'
+    deps:
+      - '~:db-rm'
     command: |
       docker run \
-        --name tanstack-start-template-db \
-        -e POSTGRES_USER=postgres \
-        -e POSTGRES_PASSWORD=postgres \
-        -e POSTGRES_DB=tanstack-start-template \
+        --name $DB_CONTAINER \
+        -e POSTGRES_USER=$DB_USER \
+        -e POSTGRES_PASSWORD=$DB_PASSWORD \
+        -e POSTGRES_DB=$DB_NAME \
         -p 5432:5432 \
         -d postgres:latest
 
-  db-stop:
-    local: true
-    description: Stop the database container.
+  db-rm:
+    description: Remove the database container.
+    options:
+      envFile: '/.env'
     command: |
-      docker stop tanstack-start-template-db
+      docker rm -f $DB_CONTAINER
+
+  db-stop:
+    description: Stop the database container.
+    options:
+      envFile: '/.env'
+    command: |
+      docker stop $DB_CONTAINER
 
   db-reset:
-    local: true
     description: Reset the database container.
+    options:
+      envFile: '/.env'
     command: |
-      docker rm -f tanstack-start-template-db
+      docker rm -f $DB_CONTAINER
 
   db-logs:
-    local: true
     description: View the database container logs.
+    options:
+      envFile: '/.env'
     command: |
-      docker logs tanstack-start-template-db
+      docker logs $DB_CONTAINER
 
   db-connect:
-    local: true
     description: Connect to the database container.
+    options:
+      envFile: '/.env'
     command: |
-      docker exec -it tanstack-start-template-db psql -U postgres -d tanstack-start-template
+      docker exec -it $DB_CONTAINER psql -U postgres -d tanstack-start-template
