WIP refactoring DB migrations

--- a/.moon/tasks/typescript-application.yml
+++ b/.moon/tasks/typescript-application.yml
@@ -9,6 +9,10 @@ tasks:
     description: Start the development server.
     command: pnpm dev
     local: true
+    options:
+      envFile:
+        - '/.env'
+        - '.env'
     inputs:
       - 'package.json'
       - 'pnpm-lock.yaml'
