--- a/apps/node/.env.secrets
+++ b/apps/node/.env.secrets
@@ -5,7 +5,7 @@
 BETTER_AUTH_SECRET="P}.]Ax)a9r>ODYBM^s}J"
 
 # Data layer.
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/tanstack-start-template"
+# DB_URL="postgres://postgres:postgres@localhost:5432/tanstack-start-template"
 
 # Mail service.
 SMTP_PASSWORD=mwmfgdmrlgjefpkq
