--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_CONTAINER=tanstack-start-template-db
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=tanstack-start-template
+DB_URL=postgresql://${DB_USER}:${DB_PASSWORD}@localhost:5432/${DB_NAME}
