--- a/apps/node/package.json
+++ b/apps/node/package.json
@@ -28,8 +28,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "drizzle-db": "workspace:^",
     "drizzle-orm": "^0.40.0",
-    "drizzle-seed": "^0.3.1",
     "lucide-react": "^0.482.0",
     "mjml": "^4.15.3",
     "next-themes": "^0.4.6",
