--- a/packages/drizzle/package.json
+++ b/packages/drizzle/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "db-schema",
+  "name": "drizzle-db",
   "private": true,
   "sideEffects": false,
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.40.0",
@@ -10,6 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
-    "drizzle-kit": "^0.30.5"
+    "drizzle-kit": "^0.30.5",
+    "tsx": "^4.19.3"
   }
 }
