--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # CICD pipeline environment variables.
+PROJECT_NAME=tanstack-start-template
 DOCKER_REGISTRY=192.168.1.30:5000
 
 # Local Postgres configuration.
