--- a/apps/tanstack-start-template/.env
+++ b/apps/tanstack-start-template/.env
@@ -8,6 +8,12 @@ LOG_LEVEL=debug
 BETTER_AUTH_URL=http://localhost:3000
 BETTER_AUTH_COOKIE_CACHE=300
 
+# Data layer.
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=app
+DB_NAME=tanstack-start-template
+
 # Mail service.
 SMTP_SERVICE=gmail
 SMTP_HOST=smtp.gmail.com
