--- a/packages/drizzle/Dockerfile
+++ b/packages/drizzle/Dockerfile
@@ -11,7 +11,16 @@ RUN npm install
 
 # Copy the rest of the application files.
 COPY drizzle.config.ts ./
-COPY migrations/ ./
+COPY migrations/ ./migrations
 
-# Set the command to run drizzle migrate.
+# Define required environment variables.
+ENV DB_USER=""
+ENV DB_HOST=""
+ENV DB_PORT=""
+ENV DB_NAME=""
+
+# Load secrets.
+ENTRYPOINT ["/bin/bash", "-c", "source /usr/local/bin/load-secrets.sh DB_PASSWORD && exec \"$@\"", "--"]
+
+# Set the command to run the migration.
 CMD ["npx", "drizzle-kit", "migrate"]
