--- a/.env
+++ b/.env
@@ -4,7 +4,6 @@ DOCKER_REGISTRY=192.168.1.30:5000
 
 # Local Postgres configuration.
 DB_CONTAINER=tanstack-start-template-db
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_USER=app
 DB_NAME=tanstack-start-template
-DB_URL=postgresql://${DB_USER}:${DB_PASSWORD}@localhost:5432/${DB_NAME}
+DB_PASSWORD=postgres
