--- a/packages/drizzle/package.json
+++ b/packages/drizzle/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.40.0",
-    "drizzle-seed": "^0.3.1"
+    "drizzle-seed": "^0.3.1",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
