WIP custom docker image

--- a/tools/database/Dockerfile
+++ b/tools/database/Dockerfile
@@ -1,5 +1,8 @@
 FROM postgres:16.4-alpine
 
 # Import secrets.
-COPY load-db-password.sh /docker-entrypoint-initdb.d/load-db-password.sh
-RUN chmod +x /docker-entrypoint-initdb.d/load-db-password.sh
+COPY ./entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT [ "/usr/local/bin/entrypoint.sh" ]
+CMD ["postgres"]
