WIP secrets management

--- a/apps/tanstack-start-template/.env
+++ b/apps/tanstack-start-template/.env
@@ -4,8 +4,8 @@ VITE_LOG_LEVEL=debug
 ## Server environment variables.
 LOG_LEVEL=debug
 
+PUBLIC_BASEURL=https://localhost:3000
 # Auth.
-BETTER_AUTH_URL=http://localhost:3000
 BETTER_AUTH_COOKIE_CACHE=300
 
 # Data layer.
