--- a/apps/tanstack-start-template/.env.secrets
+++ b/apps/tanstack-start-template/.env.secrets
@@ -1,5 +1,5 @@
-# FIXME: To decide whether to store in environments (e.g., Swarm secrets, ...).
-# TODO: Git ignore if storing real secrets here.
+# Secrets used for local development.
+# True secrets are stored as in Portainer.
 
 # Auth.
 BETTER_AUTH_SECRET="P}.]Ax)a9r>ODYBM^s}J"
