--- a/tools/deploy/docker-swarm.yml
+++ b/tools/deploy/docker-swarm.yml
@@ -1,13 +1,17 @@
 version: '3.8'
+
+x-load-secrets-config: &load-secrets-config
+  - source: load-secrets.sh
+    target: /usr/local/bin/load-secrets.sh
+    mode: 0555
+
 services:
   postgres:
     image: ${DOCKER_REGISTRY}/tanstack-start-template/database:latest
     secrets:
       - DB_PASSWORD
     configs:
-      - source: load-secrets.sh
-        target: /usr/local/bin/load-secrets.sh
-        mode: 0555
+      <<: *load-secrets-config
     environment:
       PROJECT_NAME: ${PROJECT_NAME}
       POSTGRES_DB: ${DB_NAME}
@@ -24,9 +28,7 @@ services:
     secrets:
       - DB_PASSWORD
     configs:
-      - source: load-secrets.sh
-        target: /usr/local/bin/load-secrets.sh
-        mode: 0555
+      <<: *load-secrets-config
     environment:
       PROJECT_NAME: ${PROJECT_NAME}
       DB_USER: ${DB_USER}
@@ -48,9 +50,7 @@ services:
     secrets:
       - DB_PASSWORD
     configs:
-      - source: load-secrets.sh
-        target: /usr/local/bin/load-secrets.sh
-        mode: 0555
+      <<: *load-secrets-config
     environment:
       DB_USER: ${DB_USER}
       DB_NAME: ${DB_NAME}
