--- a/tools/dev/moon.yml
+++ b/tools/dev/moon.yml
@@ -15,55 +15,23 @@ tasks:
 
   db-run:
     description: Run the database container.
-    options:
-      envFile: '.env'
     local: true
-    command: |
-      docker run \
-        --name $DB_CONTAINER \
-        -e POSTGRES_USER=$DB_USER \
-        -e POSTGRES_PASSWORD=$DB_PASSWORD \
-        -e POSTGRES_DB=$DB_NAME \
-        -p 5432:5432 \
-        -d \
-        postgres:latest || true
+    script: ./start-db.sh
 
   db-rm:
     description: Remove the database container.
-    options:
-      envFile: '.env'
-    local: true
-    command: |
-      docker rm -f $DB_CONTAINER
-
-  db-stop:
-    description: Stop the database container.
-    options:
-      envFile: '.env'
-    local: true
-    command: |
-      docker stop $DB_CONTAINER
-
-  db-reset:
-    description: Reset the database container.
-    options:
-      envFile: '.env'
     local: true
     command: |
       docker rm -f $DB_CONTAINER
 
   db-logs:
     description: View the database container logs.
-    options:
-      envFile: '.env'
     local: true
     command: |
       docker logs $DB_CONTAINER
 
   db-connect:
     description: Connect to the database container.
-    options:
-      envFile: '/.env'
     local: true
     command: |
       docker exec -it $DB_CONTAINER psql -U postgres -d tanstack-start-template
