--- a/.moon/tasks.yml
+++ b/.moon/tasks.yml
@@ -1,5 +1,5 @@
 # Define environment variables for all tasks by default.
 taskOptions:
   envFile:
-    - '/tools/deploy/.env'
+    - '/.env'
     - '.env'
